WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48546
Navigating to a .wav file creates a plugin document but should create a media document
https://bugs.webkit.org/show_bug.cgi?id=48546
Summary
Navigating to a .wav file creates a plugin document but should create a media...
Adam Roben (:aroben)
Reported
2010-10-28 11:59:40 PDT
To reproduce: 1. Go to
http://www.nch.com.au/acm/sample.wav
on Mac A plugin document is created. On Windows, a media document is created. We should be creating a plugin document on Mac, too!
Attachments
Proposed patch
(3.26 KB, patch)
2010-10-28 15:34 PDT
,
Eric Carlson
aroben
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2010-10-28 11:59:57 PDT
It looks like the MediaPlayer is saying it doesn't support the file type.
Adam Roben (:aroben)
Comment 2
2010-10-28 12:00:35 PDT
<
rdar://problem/8606105
>
Eric Carlson
Comment 3
2010-10-28 15:34:30 PDT
Created
attachment 72248
[details]
Proposed patch
Eric Carlson
Comment 4
2010-10-29 14:02:19 PDT
http://trac.webkit.org/changeset/70922
WebKit Review Bot
Comment 5
2010-10-29 15:33:53 PDT
http://trac.webkit.org/changeset/70922
might have broken Leopard Intel Release (Tests) The following tests are not passing: media/controls-drag-timebar.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug