2010-10-29  Eric Carlson  <eric.carlson@apple.com>

Reviewed by Adam Roben.

        Navigating to a .wav file creates a plugin document but should create a media document
        https://bugs.webkit.org/show_bug.cgi?id=48546
        <rdar://problem/8606105>

        Test: media/media-can-play-wav-audio.html

        * platform/MIMETypeRegistry.cpp: Add mapping from ".wav" to "audio/x-wav".

2010-10-28  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Adam Roben.

        Navigating to a .wav file creates a plugin document but should create a media document
        https://bugs.webkit.org/show_bug.cgi?id=48546
        <rdar://problem/8606105>

        * media/media-can-play-wav-audio-expected.txt: Added.
        * media/media-can-play-wav-audio.html: Added.



Canonical link: https://commits.webkit.org/61426@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70922 268f45cc-cd09-0410-ab3c-d52691b4dbfc